# aws9man

./: Cargo.toml  LICENSE  README.md
src/: main.rs
