[package]
name = "aws9man"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.6.1"
aws-sdk-health = "1.65.0"
aws-smithy-types = "1.3.0"
aws-types = "1.3.6"
chrono = "0.4.40"
clap = { version = "4.5.37", features = ["derive"] }
csv = "1.3.1"
tokio = { version = "1.44.2", features = ["full"] }
